--- a/deploy_nginx/tasks/main.yml
+++ b/deploy_nginx/tasks/main.yml
@@ -1,2 +1,22 @@
 ---
 # tasks file for deploy_nginx
+- name: Install Nginx
+  apt:
+    name: nginx
+    state: latest
+  when: ansible_os_family == "Debian"
+
+- name: Copy all files from ./MyWebSite to server
+  copy:
+    src: "{{ item }}"
+    dest: "{{ dst_folder }}"
+    mode: 0555
+  with_fileglob: "{{ src_folder }}/*.html"
+  notify: Restart nginx
+
+- name: Generating index.html
+  template:
+    src: "{{src_folder}}/index.j2"
+    dest: "{{dst_folder}}/index.html"
+    mode: 0555
+  notify: Restart nginx
