--- a/roles/deploy_nginx/tasks/main.yml
+++ b/roles/deploy_nginx/tasks/main.yml
@@ -21,7 +21,7 @@
     mode: 0555
   notify: Restart nginx
 
-- name: Crete txt file
+- name: Create txt file
   copy:
     dest: "{{dst_folder}}/text.html"
     content: |
@@ -35,3 +35,5 @@
       <h1>New html</h1>
       </body>
       </html>
+
+include: create-log.yml
