--- a/hosts.yml
+++ b/hosts.yml
@@ -4,3 +4,7 @@ all:
       hosts:
         my_ubuntu:
           ansible_host: 194.87.253.126
+  localhost:
+    ansible_host: 127.0.0.1
+    ansible_user: dzanto
+    ansible_ssh_pass: kompas
