--- a/hosts.yml
+++ b/hosts.yml
@@ -7,6 +7,6 @@ all:
   hosts:
     localhost:
       ansible_host: 127.0.0.1
-      ansible_user: dzanto
-      ansible_ssh_pass: kompas
-      ansible_sudo_pass: kompas
+#      ansible_user: dzanto
+#      ansible_ssh_pass: kompas
+#      ansible_sudo_pass: kompas
