--- a/roles/deploy_nginx/tasks/main.yml
+++ b/roles/deploy_nginx/tasks/main.yml
@@ -1,42 +1,4 @@
 ---
-# tasks file for deploy_nginx
-- name: Install Nginx
-  apt:
-    name: nginx
-    state: latest
-  when: ansible_os_family == "Debian"
-
-- name: Copy all files from ./MyWebSite to server
-  copy:
-    src: "{{ item }}"
-    dest: "{{ dst_folder }}"
-    mode: 0555
-  with_fileglob: "/*.html"
-  notify: Restart nginx
-
-- name: Generating index.html
-  template:
-    src: "index.j2"
-    dest: "{{dst_folder}}/index.html"
-    mode: 0555
-  notify: Restart nginx
-
-- name: Create txt file
-  copy:
-    dest: "{{dst_folder}}/text.html"
-    content: |
-      <!DOCTYPE html>
-      <html lang="en">
-      <head>
-          <meta charset="UTF-8">
-          <title>New</title>
-      </head>
-      <body>
-      <h1>New html</h1>
-      </body>
-      </html>
-  #Запускать только единожды для первого сервера в списке inventory
-  run_once: true
-
+#- include: nginx-setup.yml
 - include: create-log.yml
 #- include: reboot.yml
