--- a/roles/deploy_nginx/tasks/error-handling.yml
+++ b/roles/deploy_nginx/tasks/error-handling.yml
@@ -1,7 +1,9 @@
 ---
 - name: Ignore error
-  apt: name=treeee state=latest
-  ignore_erros: yes
+  apt:
+    name: treeee
+    state: latest
+#  ignore_erros: yes
 
 - name: Failed when
   shell: echo Hello world!
