--- a/roles/deploy_nginx/tasks/error-handling.yml
+++ b/roles/deploy_nginx/tasks/error-handling.yml
@@ -10,7 +10,8 @@
   register: result
 #  failed_when: result.rc == 0
   failed_when: "'World' in results.stdout"
-  debug:
+
+- debug:
     var: result
 
 - name: Task 3
