--- a/roles/deploy_nginx/tasks/error-handling.yml
+++ b/roles/deploy_nginx/tasks/error-handling.yml
@@ -3,7 +3,7 @@
   apt:
     name: treeee
     state: latest
-#  ignore_erros: yes
+  ignore_errors: yes
 
 - name: Failed when
   shell: echo Hello world!
